--- a/index.Rmd
+++ b/index.Rmd
@@ -3,11 +3,11 @@ title:
 date: "January 15, 2018"
 output: 
   html_document:
-    toc: true
-    #toc_depth: 2
-    toc_float:
-      collapsed: false
-      smooth_scroll: false
+   toc: true
+   theme: united
+   toc_float:
+     collapsed: false
+     smooth_scroll: false
 ---
 
 # Syllabus (FIN 302) Financial Management Principles
@@ -22,25 +22,27 @@ output:
 <br>
 **Instructor**: Matthew Brigida, Ph.D.
 
-**Office**: 
+**Office**: TBD
 
-**Email**:  
+**Email**:  matthew.brigida@sunyit.edu
 
-**Course Start Date**: 
+<!-- **Course Start Date**:  -->
 
-**Course End Date**: 
+<!-- **Course End Date**:  -->
 
-**Class Location**:  Hybrid (in class and Online (Blackboard))
+**Class Location**:  DONOVN 1146
+
+**Class Day/Time**: Tuesday, 6:00---9:30pm
 
 **Text**: [Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463](https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=) [Used Copies usually starting from about $4](https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used).  You also may use other editions of the text.
 
 **Supplementary Materials**: [5-Minute Finance](https://www.5minutefinance.org/).  There may be additional topics in the [Fundamentals and Corporate Finance Sections here.](https://github.com/FinancialMarkets/5MinuteFinance)
 
-**Important Dates**
+<!-- **Important Dates** -->
 
-**Midterm Exam:**  
+<!-- **Midterm Exam:**   -->
 
-**Final Exam:**  
+<!-- **Final Exam:**   -->
 
 ## Description
 
@@ -67,7 +69,33 @@ CLO 3. Strategic and Integrative Thinking: Understand the baseline resources ava
 CLO 4. Leadership and Communication: Be capable of expressing key financial concepts and terms commonly used in the field; by using effective written, oral and interpersonal communications to contribute to the financial performance of domestic firms, global organizations and other international relationships.
 
 ## Grading
+<center>
 
+```{r grading, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
+tabl <- "
+| Item | Points |
+| ---- | ------ |
+| Exam 1 |  25 |
+| Exam 2 |  25 |
+| Final Exam |  35 |
+| Homework/Pop Quizzes/Other Participation | 15 |
+| Total Points | 100 |
+"
+cat(tabl)
+```
+</center>
+
+<center>
+**Final grades will be assigned according to the following scale**:
+</center>
+
+- 90 - 100 A
+- 80 - 89.9 B
+- 70 - 79.9 C
+- 60 - 69.9 D
+- $<$ 60 F
+
+> +/- grades may be assigned at the instructors discretion.
 
 ## Guidelines and Accommodations
 
@@ -96,10 +124,19 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 > In compliance with the Americans with Disabilities Act of 1990 and with Section 504 of the Rehabilitation Act, SUNY Polytechnic Institute is committed to ensuring educational access and accommodations for all its registered students seeking access to meet course requirements and fully participate in programs or activities. SUNY Poly students with documented disabilities and medical conditions are encouraged to request these services by registering with the Disability Services Office and discussing your need for accommodations. For information or an appointment contact Director of Disability Services, located in Utica, B101 Kunsela Hall and in Albany in the Student Services Suite 309 Nano Fab South or by phone (315) 792-7170; or by email ds@sunyit.edu.
 
 
-## Instructor's Notes
+<!-- ## Instructor's Notes -->
 
--  **Understanding vs Computation**: This course will focus on understanding financial concepts over merely calculating a number. Any calculation you will see as an undergrad has already been implemented in 20+ different programming languages.  You will never get a job as a calculator.  The value of the financial analyst is in undertanding what a calculation does, what the output means, etc.  You must be able to use the appropriate calculation in a given situation, and able to understand its output to make financial decisions.
+<!-- -  **Understanding vs Computation**: This course will focus on understanding financial concepts over merely calculating a number. Any calculation you will see as an undergrad has already been implemented in 20+ different programming languages.  You will never get a job as a calculator.  The value of the financial analyst is in undertanding what a calculation does, what the output means, etc.  You must be able to use the appropriate calculation in a given situation, and able to understand its output to make financial decisions. -->
 
--  **Spreadsheet Skills**:  The above does not mean you do not need to know how to calculate financial values.  You need to be able to do so in a spreadsheet, and increasingly with some programming language (python, javascript, R, etc). The point here is that the correct calculation is the minimal amount of work you can do.  It is the easiest part.  The harder, and more important aspect, is understanding what you are doing. 
+<!-- -  **Spreadsheet Skills**:  The above does not mean you do not need to know how to calculate financial values.  You need to be able to do so in a spreadsheet, and increasingly with some programming language (python, javascript, R, etc). The point here is that the correct calculation is the minimal amount of work you can do.  It is the easiest part.  The harder, and more important aspect, is understanding what you are doing.  -->
 
--  Accordingly many *computation* questions on the exams can be solved through logic---knowing that 3 of 4 potential answers are not possible.
+<!-- -  Accordingly many *computation* questions on the exams can be solved through logic---knowing that 3 of 4 potential answers are not possible. -->
+
+## Tentative Outline
+
+- Week 1:  Chapter 1
+- Week 2:  Chapter 2
+- Week 3:  Chapter 2
+- Week 4:  Chapter 2
+- Week 5:  Chapter 2
+
