--- a/index.Rmd
+++ b/index.Rmd
@@ -134,9 +134,18 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 
 ## Tentative Outline
 
-- Week 1:  Chapter 1
-- Week 2:  Chapter 2
-- Week 3:  Chapter 2
-- Week 4:  Chapter 2
-- Week 5:  Chapter 2
-
+- 1/15: Chapter 1 & 2
+- 1/22:  Chapter 3 and 4
+- 1/29: Chapter  5
+- 2/5: Chapter 6
+- 2/12: (exam review) 
+- 2/19: {\bf 10/03 (Exam 1)} & Chapter 7
+- 2/26: Chapter 8
+- 3/12: Chapter 9
+- 3/19: Chapter 10 and 11
+- 3/26: (exam review) 
+- 4/2: {\bf 4/2 (Exam 2)} & Chapter 12
+- 4/9: Chapter 13 and 14
+- 4/16: Chapter 15
+- 4/23: exam review 
+- 4/30: Finals Week
