--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 
+title:
 date: "January 15, 2018"
-output: 
+output:
   rmdformats::html_clean:
     highlight: kate
 ##  html_document:
@@ -42,7 +42,7 @@ opts_knit$set(width=75)
 
 **Office**: Donovan 1277
 
-**Office Hours**: Tuesday 5:00--6:00 and Monday/Wednesday 10:30--12:00
+**Office Hours**: Tuesday/Thursday/Friday  10:30--11:30
 
 **Email**:  matthew.brigida@sunyit.edu
 
@@ -50,9 +50,9 @@ opts_knit$set(width=75)
 
 <!-- **Course End Date**:  -->
 
-**Class Location**:  Donovan G144
+**Class Location**:  Donovan 1157
 
-**Class Day/Time**: Tuesday, 6:00---9:30pm
+**Class Day/Time**: MWF, 9:20---10:30pm
 
 **Text**: [Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463](https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=) [Used Copies usually starting from about $4](https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used).  You also may use other editions of the text.
 
@@ -94,9 +94,9 @@ There will be three exams (two during the semester and a final).  The exams will
 
 ## Project
 
-In groups, students will value a tolling agreement on a natural gas fired power plant via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money. 
+In groups, students will value a tolling agreement on a natural gas fired power plant via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money.
 
-In addition, students will gain experience handling data, and making reasonable assumptions necessary in real-world analyses. 
+In addition, students will gain experience handling data, and making reasonable assumptions necessary in real-world analyses.
 
 ## Grading
 <center>
@@ -165,7 +165,7 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 
 ## Tentative Outline
 
-- 1/15: Chapter 1 & 2
+<!-- - 1/15: Chapter 1 & 2
 - 1/22:  Chapter 3 and 4
 - 1/29: Chapter  5
 - 2/5: Chapter 6
@@ -178,5 +178,20 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 - 4/2: <span style="color:red">**Exam 2**</span> & Chapter 12
 - 4/9: Chapter 13 and 14
 - 4/16: Chapter 15
-- 4/23: exam review 
-- 4/30: Finals Week
+- 4/23: exam review
+- 4/30: Finals Week -->
+- 8/27: Chapter 1 & 2
+- 9/3:  Chapter 3 and 4
+- 9/10: Chapter  5
+- 9/17: Chapter 6
+- 9/24: <span style="color:green">*Exam Review*</span>
+- 10/1: <span style="color:red">**Exam 1**</span> & Chapter 7
+- 10/8: Chapter 8
+- 10/15: Chapter 9
+- 10/22: Chapter 10 and 11
+- 10/29:  <span style="color:green">*Exam Review*</span>
+- 11/5: <span style="color:red">**Exam 2**</span> & Chapter 12
+- 11/12: Chapter 13 and 14
+- 11/19: Chapter 15
+- 11/26: exam review
+- 12/3: exam review
