--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title:
-date: "January 15, 2018"
+date: "January 15, 2019"
 output:
   rmdformats::html_clean:
     highlight: kate
@@ -42,7 +42,7 @@ opts_knit$set(width=75)
 
 **Office**: Donovan 1277
 
-**Office Hours**: Monday/Wednesday/Thursday  10:30--11:30
+**Office Hours**: Tuesday 5:00--6:00 and Monday/Wednesday 11:00--12:00
 
 **Email**:  matthew.brigida@sunyit.edu
 
@@ -50,9 +50,9 @@ opts_knit$set(width=75)
 
 <!-- **Course End Date**:  -->
 
-**Class Location**:  Donovan 1157
+**Class Location**:  Donovan 1146
 
-**Class Day/Time**: MWF, 9:20---10:30pm
+**Class Day/Time**: Tuesday, 6:00--9:30pm
 
 **Text**: [Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463](https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=) [Used Copies usually starting from about $4](https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used).  You also may use other editions of the text.
 
@@ -94,9 +94,11 @@ There will be three exams (two during the semester and a final).  The exams will
 
 ### Final Exam Exemption
 
-Students may be exempted from the final exam if their scores on exams 1 and 2 are sufficiently high, and they have completed all quizzes and homework assignments, and they also generally attend classes and participate.  No student is automatically exempted.  After exam 2, I will let you know the threshold that defines "sufficiently high".  If your exams scores meet the threshold, you can ask in person after class for an exemption.  I'll then confirm whether you meet all other criteria.
+Students may be exempted from the final exam if their scores on exams 1 and 2 are sufficiently high, *and* they have completed all quizzes and homework assignments, *and* they also generally attend classes and participate.  No student is automatically exempted.  After exam 2, I will let you know the threshold that defines "sufficiently high".  If your exams scores meet the threshold, you can ask in person after class for an exemption.  I'll then confirm whether you meet all other criteria.
 
 ## Project
+
+<!-- add project with banking research data set here -->
 
 In groups, students will value a tolling agreement on a natural gas fired power plant via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money.
 
@@ -173,7 +175,7 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 
 ## Tentative Outline
 
-<!-- 
+
 - 1/15: Chapter 1 & 2
 - 1/22:  Chapter 3 and 4
 - 1/29: Chapter  5
@@ -189,23 +191,22 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 - 4/16: Chapter 15
 - 4/23: exam review
 - 4/30: Finals Week 
--->
 
-- 8/27: Chapter 1 & 2
-- 9/3:  Chapter 3 and 4
-- 9/10: Chapter  5
-- 9/17: Chapter 6
-- 9/24: <span style="color:green">*Exam Review*</span>
-- 10/1: <span style="color:red">**Exam 1**</span> & Chapter 7
-- 10/8: Chapter 8
-- 10/15: Chapter 9
-- 10/22: Chapter 10 and 11
-- 10/29:  <span style="color:green">*Exam Review*</span>
-- 11/5: <span style="color:red">**Exam 2**</span> & Chapter 12
-- 11/12: Chapter 13 and 14
-- 11/19: Chapter 15
-- 11/26: exam review
-- 12/3: exam review
+<!-- - 8/27: Chapter 1 & 2 -->
+<!-- - 9/3:  Chapter 3 and 4 -->
+<!-- - 9/10: Chapter  5 -->
+<!-- - 9/17: Chapter 6 -->
+<!-- - 9/24: <span style="color:green">*Exam Review*</span> -->
+<!-- - 10/1: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
+<!-- - 10/8: Chapter 8 -->
+<!-- - 10/15: Chapter 9 -->
+<!-- - 10/22: Chapter 10 and 11 -->
+<!-- - 10/29:  <span style="color:green">*Exam Review*</span> -->
+<!-- - 11/5: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
+<!-- - 11/12: Chapter 13 and 14 -->
+<!-- - 11/19: Chapter 15 -->
+<!-- - 11/26: exam review -->
+<!-- - 12/3: exam review -->
 
 <!---## A note on learning in the course and in finance generally:
 
