--- a/index.Rmd
+++ b/index.Rmd
@@ -4,12 +4,6 @@ date: "January 15, 2019"
 output:
   rmdformats::html_clean:
     highlight: kate
-##  html_document:
-##   toc: true
-##   theme: spacelab
-##   toc_float:
-##     collapsed: false
-##     smooth_scroll: false
 ---
 
 ```{r knitr_init, echo=FALSE, cache=FALSE}
@@ -42,7 +36,7 @@ opts_knit$set(width=75)
 
 **Office**: Donovan 1277
 
-**Office Hours**: Tuesday 5:00--6:00 and Monday/Wednesday 11:00--12:00
+**Office Hours**: Tuesday 4:00--6:00 and Monday/Wednesday 11:00--12:00
 
 **Email**:  matthew.brigida@sunyit.edu
 
@@ -158,12 +152,23 @@ Accommodations are implemented to ensure compliance with the Americans with Disa
 
 The Disabilities Services Office is happy to advocate or coordinate with outside service providers, by student request and with written consent to communicate. Parents should be aware that legal rights and responsibilities change from high school to the college, both in terms of the type of support provided and in terms of parental involvement in the process. Students are solely responsible for self-identifying and following up with our office for any needs that they may have. Any student who wishes to have our office communicate with a parent must sign a written consent for permission to communicate.
 
-### Course Syllabus Disclosure Statement Fall 2018
+### Course Syllabus Disclosure Statement Spring 2019
 
-Accommodations for Students with Disabilities registered at SUNY Polytechnic Institute
+>Accommodations for Students with Disabilities
 
-> In compliance with the Americans with Disabilities Act of 1990 and with Section 504 of the Rehabilitation Act, SUNY Polytechnic Institute is committed to ensuring educational access and accommodations for all its registered students seeking access to meet course requirements and fully participate in programs or activities. SUNY Poly students with documented disabilities and medical conditions are encouraged to request these services by registering with the Disability Services Office and discussing your need for accommodations. For information or an appointment contact Director of Disability Services, located in Utica, B101 Kunsela Hall and in Albany in the Student Services Suite 309 Nano Fab South or by phone (315) 792-7170; or by email ds@sunyit.edu.
+>In compliance with the Americans with Disabilities Act of 1990 and Section 504 of the Rehabilitation Act, SUNY Polytechnic Institute is committed to ensuring comprehensive educational access and accommodations for all registered students seeking access to meet course requirements and fully participate in programs and activities.  Students with documented disabilities or medical conditions are encouraged to request these services by registering with the Office of Disability Services.  For information related to these services or to schedule an appointment, please contact the Office of Disability Services using the information provided below.
 
+>Evelyn Lester, Director
+>Office of Disability Services
+>lestere@sunypoly.edu
+>(315) 792-7170
+>
+>Utica Campus
+>Peter J. Cayan Library, L145
+>
+>Albany Campus
+>Suite 309, Students Services Office
+>NanoFab South
 
 <!-- ## Instructor's Notes -->
 
@@ -173,24 +178,25 @@ Accommodations for Students with Disabilities registered at SUNY Polytechnic Ins
 
 <!-- -  Accordingly many *computation* questions on the exams can be solved through logic---knowing that 3 of 4 potential answers are not possible. -->
 
-## Tentative Outline
+## Tentative Outline by Week
 
 
-- 1/15: Chapter 1 & 2
-- 1/22:  Chapter 3 and 4
-- 1/29: Chapter  5
-- 2/5: Chapter 6
-- 2/12: <span style="color:green">*Exam Review*</span>
-- 2/19: <span style="color:red">**Exam 1**</span> & Chapter 7
-- 2/26: Chapter 8
-- 3/12: Chapter 9
-- 3/19: Chapter 10 and 11
-- 3/26:  <span style="color:green">*Exam Review*</span>
-- 4/2: <span style="color:red">**Exam 2**</span> & Chapter 12
-- 4/9: Chapter 13 and 14
-- 4/16: Chapter 15
-- 4/23: exam review
-- 4/30: Finals Week 
+- 1/22: Chapter 1 & 2
+- 1/28:  Chapter 3 and 4
+- 2/4: Chapter  5
+- 2/11: Chapter 6
+- 2/18: <span style="color:green">*Exam Review*</span>
+- 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7
+- 3/4: Chapter 8
+- 3/11: Spring Break
+- 3/18: Chapter 9
+- 3/25: Chapter 10 and 11
+- 4/1:  <span style="color:green">*Exam Review*</span>
+- 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12
+- 4/15: Chapter 13 and 14
+- 4/22: Chapter 15
+- 4/29: exam review
+- 5/6: Finals Week 
 
 <!-- - 8/27: Chapter 1 & 2 -->
 <!-- - 9/3:  Chapter 3 and 4 -->
