--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ opts_knit$set(width=75)
 
 **Office**: Donovan 1277
 
-**Office Hours**: Tuesday 4:00--6:00 and Monday/Wednesday 11:00--12:00
+**Office Hours**: Tuesday and Wednesday 4:30--6:00
 
 **Email**:  matthew.brigida@sunyit.edu
 
@@ -46,7 +46,7 @@ opts_knit$set(width=75)
 
 **Class Location**:  Donovan 1146
 
-**Class Day/Time**: Tuesday, 6:00--9:30pm
+**Class Day/Time**: Wednesday, 6:00--9:30pm
 
 **Text**: [Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463](https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=) [Used Copies usually starting from about $4](https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used).  You also may use other editions of the text.
 
@@ -181,38 +181,38 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 ## Tentative Outline by Week
 
 
-- 1/22: Chapter 1 & 2
-- 1/28:  Chapter 3 and 4
-- 2/4: Chapter  5
-- 2/11: Chapter 6
-- 2/18: <span style="color:green">*Exam Review*</span>
-- 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7
-- 3/4: Chapter 8
-- 3/11: Spring Break
-- 3/18: Chapter 9
-- 3/25: Chapter 10 and 11
-- 4/1:  <span style="color:green">*Exam Review*</span>
-- 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12
-- 4/15: Chapter 13 and 14
-- 4/22: Chapter 15
-- 4/29: exam review
-- 5/6: Finals Week 
-
-<!-- - 8/27: Chapter 1 & 2 -->
-<!-- - 9/3:  Chapter 3 and 4 -->
-<!-- - 9/10: Chapter  5 -->
-<!-- - 9/17: Chapter 6 -->
-<!-- - 9/24: <span style="color:green">*Exam Review*</span> -->
-<!-- - 10/1: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
-<!-- - 10/8: Chapter 8 -->
-<!-- - 10/15: Chapter 9 -->
-<!-- - 10/22: Chapter 10 and 11 -->
-<!-- - 10/29:  <span style="color:green">*Exam Review*</span> -->
-<!-- - 11/5: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
-<!-- - 11/12: Chapter 13 and 14 -->
-<!-- - 11/19: Chapter 15 -->
-<!-- - 11/26: exam review -->
-<!-- - 12/3: exam review -->
+<!-- - 1/22: Chapter 1 & 2 -->
+<!-- - 1/28:  Chapter 3 and 4 -->
+<!-- - 2/4: Chapter  5 -->
+<!-- - 2/11: Chapter 6 -->
+<!-- - 2/18: <span style="color:green">*Exam Review*</span> -->
+<!-- - 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
+<!-- - 3/4: Chapter 8 -->
+<!-- - 3/11: Spring Break -->
+<!-- - 3/18: Chapter 9 -->
+<!-- - 3/25: Chapter 10 and 11 -->
+<!-- - 4/1:  <span style="color:green">*Exam Review*</span> -->
+<!-- - 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
+<!-- - 4/15: Chapter 13 and 14 -->
+<!-- - 4/22: Chapter 15 -->
+<!-- - 4/29: exam review -->
+<!-- - 5/6: Finals Week  -->
+Week Starting: Chapter Covered
+- 8/26: Chapter 1 & 2
+- 9/2:  Chapter 3 and 4
+- 9/9: Chapter  5
+- 9/16: Chapter 6
+- 9/23: <span style="color:green">*Exam Review*</span>
+- 9/30: <span style="color:red">**Exam 1**</span> & Chapter 7
+- 10/7: Chapter 8
+- 10/14: Chapter 9
+- 10/21: Chapter 10 and 11
+- 10/28:  <span style="color:green">*Exam Review*</span>
+- 11/4: <span style="color:red">**Exam 2**</span> & Chapter 12
+- 11/11: Chapter 13 and 14
+- 11/18: Chapter 15
+- 11/25: exam review
+- 12/2: exam review
 
 <!---## A note on learning in the course and in finance generally:
 
