--- a/index.Rmd
+++ b/index.Rmd
@@ -182,45 +182,63 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 
 ## Tentative Outline by Week
 
-<!-- - 1/22: Chapter 1 & 2 -->
-<!-- - 1/28:  Chapter 3 and 4 -->
-<!-- - 2/4: Chapter  5 -->
-<!-- - 2/11: Chapter 6 -->
-<!-- - 2/18: <span style="color:green">*Exam Review*</span> -->
-<!-- - 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
-<!-- - 3/4: Chapter 8 -->
-<!-- - 3/11: Spring Break -->
-<!-- - 3/18: Chapter 9 -->
-<!-- - 3/25: Chapter 10 and 11 -->
-<!-- - 4/1:  <span style="color:green">*Exam Review*</span> -->
-<!-- - 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
-<!-- - 4/15: Chapter 13 and 14 -->
-<!-- - 4/22: Chapter 15 -->
-<!-- - 4/29: exam review -->
-<!-- - 5/6: Finals Week  -->
+- 1/22: Chapter 1 & 2
+- 1/28:  Chapter 3 and 4
+- 2/4: Chapter  5
+- 2/11: Chapter 6
+- 2/18: <span style="color:green">*Exam Review*</span>
+- 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7
+- 3/4: Chapter 8
+- 3/11: Spring Break
+- 3/18: Chapter 9
+- 3/25: Chapter 10 and 11
+- 4/1:  <span style="color:green">*Exam Review*</span>
+- 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12
+- 4/15: Chapter 13 and 14
+- 4/22: Chapter 15
+- 4/29: exam review
 
-- 8/26: Chapter 1 & 2
-- 9/2:  Chapter 3 and 4
-- 9/9: Chapter  5
-- 9/16: Chapter 6
-- 9/23: <span style="color:green">*Exam Review*</span>
-- 9/30: <span style="color:red">**Exam 1**</span> & Chapter 7
-- 10/7: Chapter 8
-- 10/14: Chapter 9
-- 10/21: Chapter 10 and 11
-- 10/28:  <span style="color:green">*Exam Review*</span>
-- 11/4: <span style="color:red">**Exam 2**</span> & Chapter 12
-- 11/11: Chapter 13 and 14
-- 11/18: Chapter 15
-- 11/25: exam review
-- 12/2: exam review
+
+<!-- - 8/26: Chapter 1 & 2 -->
+<!-- - 9/2:  Chapter 3 and 4 -->
+<!-- - 9/9: Chapter  5 -->
+<!-- - 9/16: Chapter 6 -->
+<!-- - 9/23: <span style="color:green">*Exam Review*</span> -->
+<!-- - 9/30: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
+<!-- - 10/7: Chapter 8 -->
+<!-- - 10/14: Chapter 9 -->
+<!-- - 10/21: Chapter 10 and 11 -->
+<!-- - 10/28:  <span style="color:green">*Exam Review*</span> -->
+<!-- - 11/4: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
+<!-- - 11/11: Chapter 13 and 14 -->
+<!-- - 11/18: Chapter 15 -->
+<!-- - 11/25: exam review -->
+<!-- - 12/2: exam review -->
 
 
 ## Communication by Email
 
 ### When It Is Appropriate
 
-This is an in-class course, and you are responsible for knowing what has taken place in class.  In the case of an unexcused absence, you should come by office hours or talk with classmates to learn what you missed. 
+This is an in-class course, and you are responsible for knowing what has taken place in class.  In the case of an unexcused absence, you should come by office hours or talk with classmates to learn what you missed. It is not appropriate to email me.
+
+In the case of an absence due to medical or family emergency, you can email me your documentation along with questions regarding what you missed.  However you can also stop by office hours if convenient.
+
+### How to Write an Email
+
+`Subject:` FIN 302: [Clear Subject Here]
+
+`Body:`
+
+Dear Professor (or Dr.) Brigida,
+
+[Text of email here.]
+
+Sincerely, 
+
+[Your name.]
+
+
 
 <!---## A note on learning in the course and in finance generally:
 
